2005-04-18  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-connection.c: (connection_free):
	- Check if connection is opening as well and close it if it is.
	- Fix suggested by Daniel Lavalliere.

2005-03-31  Mikael Hallendal  <micke@imendio.com>

	* Makefile.am:
	* CONTRIBUTORS: 
	* loudmouth/lm-connection.c:
	* loudmouth/lm-ssl.c:
	- More release work. 
	- Adding CONTRIBUTORS file.

2005-03-31  Mikael Hallendal  <micke@imendio.com>

	* Makefile.am:
	* configure.in:
	- Removed the mono directory from the release tarball, never finished
	  and should probably be redone from scratch if to be done now.

2005-03-31  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-debug.h: Correct log domain
	* loudmouth/lm-ssl.c: (ssl_verify_certificate):
	- Removed GNUTLS_CERT_NOT_TRUSTED which has been removed from GnuTLS.
	- Patch from foser@gentoo.org

2005-02-02  Mikael Hallendal  <micke@imendio.com>

	* examples/lm-change-password.c: (print_usage), (main):
	- Support sending --host which would be the host part of the jid if
	  the connect server is different.

2005-01-27  Martyn Russell  <mr@gnome.org>

	* loudmouth/lm-connection.c (_lm_connection_failed_with_error): 
	- Added fix to call the open callback when all connection attempts
	fail to the destination server.

2005-01-19  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-connection.c: (connection_in_event):
	* loudmouth/lm-ssl.c: (_lm_ssl_read):
	- Seems GnuTLS returns a huge size as read bytes when the server is
	  disconnected. Check if returned read size is larger than asked for
	  if so, set the connection to be hung up.
	- Fixes bug #164592

2004-11-08  Mikael Hallendal  <micke@imendio.com>

	* examples/lm-change-password.c: Added SSL support
	* examples/lm-register.c: Added SSL support

2004-10-31  Mikael Hallendal  <micke@imendio.com>

	* Release 0.17.2

	* NEWS: Updated for 0.17.2
	* configure.in: Bumped version to 0.17.2

2004-10-30  Mikael Hallendal  <micke@imendio.com>
