@@ -1,3 +1,11 @@
+2005-04-24  Mikael Hallendal  <micke@imendio.com>
+
+	* loudmouth/lm-connection.c: (_lm_connection_succeeded),
+	(_lm_connection_failed_with_error), (connection_connect_cb),
+	(connection_do_connect), (connection_do_close):
+	- Disconnect from the connect io-watch when connect is done.
+	- Based on a patch from Daniel Lavalliere.
+
 2005-04-18  Mikael Hallendal  <micke@imendio.com>
 
 	* loudmouth/lm-connection.c: (connection_free):
